# ParProg_task-2

./: BICGStab.hpp  CMakeLists.txt  README.md  VectorOperators.hpp  main.cpp
output/: openMP_thr_1_N_1500.txt  openMP_thr_1_N_3000.txt  openMP_thr_2_N_1500.txt  openMP_thr_2_N_3000.txt  openMP_thr_4_N_1500.txt  openMP_thr_4_N_3000.txt  openMP_thr_8_N_1500.txt  openMP_thr_8_N_3000.txt
